--- a/matlab_archive/mylab2/mylab2_simulink_to_ros_ert_rtw/html/mylab2_simulink_to_ros_subsystems.html
+++ b/matlab_archive/mylab2/mylab2_simulink_to_ros_ert_rtw/html/mylab2_simulink_to_ros_subsystems.html
@@ -69,7 +69,7 @@ Outcome Diagnostic
 </tr>
 <tr class="even">
 <td align="left" valign="top">
-<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:1')" name="code2model" class="code2model">&lt;S3&gt;</a>
+<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:1')" name="code2model" class="code2model">&lt;S4&gt;</a>
 </td>
 <td align="left" valign="top">
 Auto
@@ -84,7 +84,52 @@ Inline
 </tr>
 <tr class="odd">
 <td align="left" valign="top">
-<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:12')" name="code2model" class="code2model">&lt;S4&gt;</a>
+<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:12')" name="code2model" class="code2model">&lt;S5&gt;</a>
+</td>
+<td align="left" valign="top">
+Auto
+</td>
+<td align="left" valign="top">
+Inline
+</td>
+<td align="left" valign="top">
+<FONT COLOR="green">normal</FONT>
+</td>
+
+</tr>
+<tr class="even">
+<td align="left" valign="top">
+<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:24')" name="code2model" class="code2model">&lt;S6&gt;</a>
+</td>
+<td align="left" valign="top">
+Auto
+</td>
+<td align="left" valign="top">
+Inline
+</td>
+<td align="left" valign="top">
+<FONT COLOR="green">normal</FONT>
+</td>
+
+</tr>
+<tr class="odd">
+<td align="left" valign="top">
+<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:13:52')" name="code2model" class="code2model">&lt;S10&gt;</a>
+</td>
+<td align="left" valign="top">
+Auto
+</td>
+<td align="left" valign="top">
+Inline
+</td>
+<td align="left" valign="top">
+<FONT COLOR="green">normal</FONT>
+</td>
+
+</tr>
+<tr class="even">
+<td align="left" valign="top">
+<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:13')" name="code2model" class="code2model">&lt;S8&gt;</a>
 </td>
 <td align="left" valign="top">
 Auto
