--- a/matlab_archive/mylab2/mylab2_simulink_to_ros_ert_rtw/html/mylab2_simulink_to_ros_interface.html
+++ b/matlab_archive/mylab2/mylab2_simulink_to_ros_ert_rtw/html/mylab2_simulink_to_ros_interface.html
@@ -294,10 +294,70 @@ Dimension
 </tr>
 <tr class="even">
 <td width="42%" align="left" valign="top">
-<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:5:33')" name="code2model" class="code2model">&lt;S1&gt;/Constant</a>
+<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:13:55')" name="code2model" class="code2model">&lt;S10&gt;/Out1</a>
+</td>
+<td width="26%" align="left" valign="top">
+mylab2_simulink_to_ros_P.Out1_Y0
+</td>
+<td width="21%" align="left" valign="top">
+SL_Bus_mylab2_simulink_to_ros_arduino_sub_pub_msgs_type
+</td>
+<td width="10%" align="right" valign="top">
+1
+</td>
+
+</tr>
+<tr class="odd">
+<td width="42%" align="left" valign="top">
+<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:13:51')" name="code2model" class="code2model">&lt;S8&gt;/Constant</a>
 </td>
 <td width="26%" align="left" valign="top">
 mylab2_simulink_to_ros_P.Constant_Value
+</td>
+<td width="21%" align="left" valign="top">
+SL_Bus_mylab2_simulink_to_ros_arduino_sub_pub_msgs_type
+</td>
+<td width="10%" align="right" valign="top">
+1
+</td>
+
+</tr>
+<tr class="even">
+<td width="42%" align="left" valign="top">
+<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:25:33')" name="code2model" class="code2model">&lt;S3&gt;/Constant</a>
+</td>
+<td width="26%" align="left" valign="top">
+mylab2_simulink_to_ros_P.Constant_Value_o
+</td>
+<td width="21%" align="left" valign="top">
+SL_Bus_mylab2_simulink_to_ros_arduino_sub_pub_msgs_type
+</td>
+<td width="10%" align="right" valign="top">
+1
+</td>
+
+</tr>
+<tr class="odd">
+<td width="42%" align="left" valign="top">
+<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:20')" name="code2model" class="code2model">&lt;Root&gt;/Switch</a>
+</td>
+<td width="26%" align="left" valign="top">
+mylab2_simulink_to_ros_P.Switch_Threshold
+</td>
+<td width="21%" align="left" valign="top">
+real_T
+</td>
+<td width="10%" align="right" valign="top">
+1
+</td>
+
+</tr>
+<tr class="even">
+<td width="42%" align="left" valign="top">
+<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:5:33')" name="code2model" class="code2model">&lt;S1&gt;/Constant</a>
+</td>
+<td width="26%" align="left" valign="top">
+mylab2_simulink_to_ros_P.Constant_Value_l
 </td>
 <td width="21%" align="left" valign="top">
 SL_Bus_mylab2_simulink_to_ros_std_msgs_Float32
@@ -312,7 +372,7 @@ SL_Bus_mylab2_simulink_to_ros_std_msgs_Float32
 <a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:9:33')" name="code2model" class="code2model">&lt;S2&gt;/Constant</a>
 </td>
 <td width="26%" align="left" valign="top">
-mylab2_simulink_to_ros_P.Constant_Value_l
+mylab2_simulink_to_ros_P.Constant_Value_ln
 </td>
 <td width="21%" align="left" valign="top">
 SL_Bus_mylab2_simulink_to_ros_std_msgs_Float32
@@ -338,6 +398,21 @@ real32_T
 
 </tr>
 <tr class="odd">
+<td width="42%" align="left" valign="top">
+<a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:21')" name="code2model" class="code2model">&lt;Root&gt;/Constant3</a>
+</td>
+<td width="26%" align="left" valign="top">
+mylab2_simulink_to_ros_P.Constant3_Value
+</td>
+<td width="21%" align="left" valign="top">
+real32_T
+</td>
+<td width="10%" align="right" valign="top">
+1
+</td>
+
+</tr>
+<tr class="even">
 <td width="42%" align="left" valign="top">
 <a href="matlab:coder.internal.code2model('mylab2_simulink_to_ros:15')" name="code2model" class="code2model">&lt;Root&gt;/Constant1</a>
 </td>
